// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateAllMemberships matches snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation {
    
    alias123: updateMembership(communityId: 123, data: {settings: {sendEmail:true}}) {
      id
    }
  ,
    alias456: updateMembership(communityId: 456, data: {settings: {sendEmail:true}}) {
      id
    }
  
  }",
  },
  "meta": Object {
    "optimistic": true,
    "settings": Object {
      "sendEmail": true,
    },
  },
  "type": "SearchPage/UPDATE_ALL_MEMBERSHIP_SETTINGS",
}
`;

exports[`updateMembershipSettings matches snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($communityId: ID, $data: MembershipInput) {
        updateMembership(communityId: $communityId, data: $data) {
          id
        }
      }",
    "variables": Object {
      "communityId": 123,
      "data": Object {
        "settings": Object {
          "sendEmail": true,
        },
      },
    },
  },
  "meta": Object {
    "communityId": 123,
    "optimistic": true,
    "settings": Object {
      "sendEmail": true,
    },
  },
  "type": "SearchPage/UPDATE_MEMBERSHIP_SETTINGS",
}
`;
